--- a/members_app/templates/members_app/inc/master.html
+++ b/members_app/templates/members_app/inc/master.html
@@ -247,7 +247,7 @@
                                             </a>
                                             <!--end::Item-->
                                             <!--begin::Item-->
-                                            <a href="{% url 'member-inbox' %}" class="navi-item px-8">
+                                            <a href="{% url 'member-inbox-list' %}" class="navi-item px-8">
                                                 <div class="navi-link">
                                                     <div class="navi-icon mr-2">
                                                         <span class="svg-icon svg-icon-warning svg-icon-2x">
@@ -929,6 +929,10 @@
         <!--end::Page Vendors-->
         <!--begin::Page Scripts(used by this page)-->
         <script src="{% static 'assets/js/custom/djangocookie.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/custom/general/helpers.js' %}"></script>
+        <script src="{% static 'assets/js/custom/general/utils.js' %}"></script>
+        <script src="{% static 'assets/js/pages/crud/forms/widgets/autosize.js' %}"></script>
+        <script src="{% static 'assets/js/pages/features/miscellaneous/bootstrap-notify.js' %}"></script>
         <script src="{% static 'assets/js/pages/widgets.js' %}"></script>
         <script src="{% static 'assets/js/lodash.js' %}" type="text/javascript"></script>
         <script src="{% static 'assets/js/axios.min.js' %}" type="text/javascript"></script>
@@ -937,7 +941,6 @@
         <script src="{% static 'assets/js/custom/library/flowtype.js' %}"></script>
         <script>
             $(document).ready(function () {
-
                 // Autosize the textarea
                 autosize(document.querySelectorAll('textarea'));
                 $('[data-toggle="tooltip"]').tooltip();
@@ -986,7 +989,6 @@
 
             });
         </script>
-        <script src="{% static 'assets/js/custom/general/utils.js' %}"></script>
         <script src="{% static 'assets/js/custom/members_app/apis.js' %}"></script>
         <script src="{% static 'assets/js/custom/members_app/helpers.js' %}"></script>
         <script src="{% static 'assets/js/custom/members_app/members.js' %}" type="text/javascript"></script>
