--- a/members_app/templates/members_app/inc/profile_left_side.html
+++ b/members_app/templates/members_app/inc/profile_left_side.html
@@ -184,7 +184,7 @@
             </div>
 
             <div class="navi-item mb-2">
-              <a href="{% url 'member-inbox' %}" class="navi-link py-4">
+              <a href="{% url 'member-inbox-list' %}" class="navi-link py-4">
                 <span class="navi-icon mr-2">
                   <span class="svg-icon svg-icon-primary svg-icon-2x">
                     <!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo2\dist/../src/media/svg/icons\Communication\Mail-heart.svg--><svg
