--- a/messages_app/templates/messages_app/members/list.html
+++ b/messages_app/templates/messages_app/members/list.html
@@ -33,7 +33,7 @@ Inbox
                 <div class="col-12 col-sm-6 col-xxl-4 order-2 order-xxl-1 d-flex flex-wrap align-items-center">
                     <div class="d-flex align-items-center mr-1 my-2">
                         <label data-inbox="group-select" class="checkbox checkbox-inline checkbox-primary mr-3">
-                            <input type="checkbox">
+                            <input type="checkbox" id="memberInboxAllMsgCheckbox" />
                             <span class="symbol-label"></span>
                         </label>
 
