fix: fix no replies alert

--- a/messages_app/templates/messages_app/members/details.html
+++ b/messages_app/templates/messages_app/members/details.html
@@ -170,7 +170,11 @@
 
                     </div>
                     {% empty %}
-                    No Replies.
+                    <div class="container mt-5">
+                        <div class="alert alert-custom alert-light-primary" role="alert">
+                            No replies for this message
+                        </div>
+                    </div>
                     {% endfor %}
 
 
