fix: call stripe in master page only

--- a/dashboard/templates/dashboard/inc/master.html
+++ b/dashboard/templates/dashboard/inc/master.html
@@ -222,7 +222,7 @@
 	{# Start Crash modal #}
 	{% include 'crash_reporting/segments/crash_modal.html' %}
 	{# End Crash modal #}
-	<!--<script src="https://js.stripe.com/v3/"></script>-->
+	<script src="https://js.stripe.com/v3/"></script>
 	<script>
 		var HOST_URL = "https://keenthemes.com/metronic/tools/preview";
 	</script>
