fix: include vuejs3 and stripe js files

--- a/members_app/templates/members_app/inc/master.html
+++ b/members_app/templates/members_app/inc/master.html
@@ -919,6 +919,8 @@
         </script>
         <!--end::Global Config-->
         <!--begin::Global Theme Bundle(used by all pages)-->
+        <script src="https://js.stripe.com/v3/"></script>
+        <script src="{% static 'assets/js/vue3.js' %}"></script>
         <script src="{% static 'assets/plugins/custom/prismjs/prismjs.bundle.js' %}"></script>
         <script src="{% static 'assets/plugins/global/plugins.bundle.js' %}"></script>
         <script src="{% static 'assets/js/scripts.bundle.js' %}"></script>
