--- a/members_app/templates/members_app/profile/account_settings.html
+++ b/members_app/templates/members_app/profile/account_settings.html
@@ -13,10 +13,14 @@ Account Settings
 <link rel="stylesheet" href="{% static 'assets/css/stripe-checkout.css' %}" type="text/css" />
 <link rel="stylesheet" href="{% static 'assets/css/stripe_upgrade_membership_modal.css' %}" type="text/css" />
 <style>
-    #upgradeMembershipTable tbody td{
-        
+    #upgradeMembershipTable tbody td {
+
         vertical-align: middle;
     }
+    .swal2-modal {
+        min-width: 500px !important;
+    };
+
 </style>
 {% endblock customcss %}
 
@@ -91,7 +95,7 @@ Account Settings
                     <!--begin: Wizard Body-->
                     <div class="card card-custom card-shadowless rounded-top-0">
                         <div class="card-body pt-2 p-0">
-                            <div class="row justify-content-center py-5 px-8 py-lg-5 px-lg-10">
+                            <div class="row justify-content-center py-5 py-lg-5">
                                 <div class="col-xl-12 col-xxl-11">
                                     <!--begin: Wizard Form-->
                                     <form method="POST"
@@ -496,112 +500,10 @@ Account Settings
                                 <!--end: Wizard Step 2-->
                                 <!--begin: Wizard Step 3-->
                                 <div class="pb-5" data-wizard-type="step-content">
-                                    <script src="https://js.stripe.com/v3/" data-key="{{stripe_key}}"></script>
-                                    <div class="card-body pt-2 pb-0">
-                                        <form method="POST" id="update-payment-form"
-                                            action="{% url 'membership-account-update-stripe' %}">
-                                            {% csrf_token %}
-                                            <input type="hidden" name="form-name" value="stripe-form" />
-                                            <fieldset>
-                                                <legend>Payment Information</legend>
-                                                {% if has_connection is not None %}
-                                                <div class="form-group">
-                                                    <label>Name</label>
-                                                    <div class="input-group">
-                                                        <div class="input-group-prepend"><span
-                                                                class="input-group-text"><i
-                                                                    class="la la-user"></i></span>
-                                                        </div>
-                                                        <input type="text" value="{{ stripe_name }}" name="full_name"
-                                                            class="form-control" placeholder="Full Name">
-                                                    </div>
-                                                    <span class="form-text text-muted">The customer’s full name or
-                                                        business name on stripe.</span>
-                                                </div>
-                                                {% else %}
-                                                <div class="form-group">
-                                                    <label>Name</label>
-                                                    <div class="input-group" data-toggle="tooltip" title="Not Allowed!">
-                                                        <div class="input-group-prepend"><span
-                                                                class="input-group-text not-allowed-cursor"><i
-                                                                    class="la la-user not-allowed-cursor"></i></span>
-                                                        </div>
-                                                        <input type="text" value="No Internet Connection" disabled
-                                                            readonly name="full_name"
-                                                            class="form-control not-allowed-cursor bg-gray-100"
-                                                            placeholder="Full Name" />
-                                                    </div>
-                                                    <span class="form-text text-muted">
-                                                        The customer’s business name on stripe.
-                                                    </span>
-                                                </div>
-                                                {% endif %}
-
-                                                {% if has_connection is not None %}
-                                                <div class="form-group row">
-                                                    <div class="col">
-                                                        <label class="mb-4 font-weight-bolder" for="card-element">
-                                                            Credit or debit card
-                                                        </label>
-                                                        <div class="pl-5">
-                                                            <div id="card-element">
-                                                                <!-- A Stripe Element will be inserted here. -->
-                                                            </div>
-                                                            <span class="d-inline-block my-3 text-muted"
-                                                                style="font-weight: 600;">
-                                                                ************{{last4}}
-                                                            </span>
-                                                            <!-- Used to display form errors. -->
-                                                            <div id="card-errors" role="alert"></div>
-                                                        </div>
-                                                        <!-- <div class="separator separator-solid mb-5"></div> -->
-                                                    </div>
-                                                </div>
-                                                {% else %}
-                                                <div class="form-group">
-                                                    <label class="mb-4 font-weight-bolder" for="card-element">
-                                                        Credit or debit card
-                                                    </label>
-                                                    <div class="input-group" data-toggle="tooltip" title="Not Allowed!">
-                                                        <div class="input-group-prepend"><span
-                                                                class="input-group-text not-allowed-cursor">
-                                                                <i
-                                                                    class="icon-xl la la-credit-card not-allowed-cursor"></i>
-                                                            </span>
-                                                        </div>
-                                                        <input type="text" value="No Internet Connection" disabled
-                                                            readonly name="full_name"
-                                                            class="form-control not-allowed-cursor bg-gray-100"
-                                                            placeholder="Credit Card Number" />
-                                                    </div>
-                                                    <span class="form-text text-muted">
-                                                        Stripe Credit Card Number
-                                                    </span>
-                                                </div>
-                                                {% endif %}
-
-
-
-                                            </fieldset>
-                                    </div>
-                                    <fieldset>
-                                        {# start update stripe button #}
-                                        <div class="card-footer border-top-0">
-                                            <div class="row form-group">
-                                                <div class="col text-right">
-                                                    <button type="submit"
-                                                        class="btn btn-light-primary mr-2">Update</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        {# end update stripe button #}
-                                        </form>
-                                    </fieldset>
-                                    <!-- <div class="separator separator-solid mb-5"></div> -->
-                                    <!-- Start Upgrade Membership block -->
-                                    {% include "members_app/segments/upgrade_membership.html" %}
-                                    <!-- End Upgrade Membership block -->
-
+                                        <!-- <div class="separator separator-solid mb-5"></div> -->
+                                        <!-- Start Upgrade Membership block -->
+                                        {% include "members_app/segments/upgrade_membership.html" %}
+                                        <!-- End Upgrade Membership block -->
 
                                 </div>
                                 <!--end: Wizard Step 3-->
@@ -750,13 +652,11 @@ Account Settings
 {% endblock content%}
 
 {% block customjs %}
-<script src="https://js.stripe.com/v3/"></script>
+<!--begin::Page Scripts(used by this page)-->
 <script src="{% static 'assets/js/custom/djangocookie.js' %}" type="text/javascript"></script>
 <script src="{% static 'assets/js/custom/members_app/stripe-update.js' %}"></script>
 <script src="{% static 'assets/js/custom/members_app/member_wizard.js' %}" type="text/javascript"></script>
-<script src="{% static 'assets/js/custom/members_app/stripe_upgrade_membership.js' %}" type="text/javascript"></script>
 <script src="{% static 'assets/js/pages/custom/profile/profile.js' %}"></script>
-<!--begin::Page Scripts(used by this page)-->
 <script src="{% static 'assets/js/pages/crud/forms/widgets/bootstrap-datepicker.js' %}"></script>
 <script>
     var arrows;
@@ -846,5 +746,6 @@ Account Settings
         });
 
     }); // end of document ready
+
 </script>
 {% endblock customjs %}
