--- a/membership/templates/membership/checkout.html
+++ b/membership/templates/membership/checkout.html
@@ -29,7 +29,6 @@ Check out
       <!-- Stripe Form Checkout Form -->
       <div class="my-5">
 
-        <script src="https://js.stripe.com/v3/" data-key="{{stripe_key}}"></script>
         <form action="{% url 'checkout' %}" method="post" id="payment-form">
           {% csrf_token %}
           <fieldset>
@@ -40,7 +39,7 @@ Check out
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text"><i class="la la-user"></i></span>
                   </div>
-                  <input type="text" readonly value="{{ subscription.member_id.full_name }}" name="full_name"
+                  <input type="text" readonly value="{{ subscription.member.full_name }}" name="full_name"
                     class="form-control" placeholder="Full Name">
                 </div>
                 <!--                        <span class="form-text text-muted">Please enter your username</span>-->
@@ -50,7 +49,7 @@ Check out
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text">@</span></div>
                   <input type="email" readonly class="form-control" name="email" placeholder="Email"
-                    value="{{ subscription.member_id.email }}" aria-describedby="email-address">
+                    value="{{ subscription.member.email }}" aria-describedby="email-address">
                 </div>
                 <!--                        <span class="form-text text-muted">Some help content goes here</span>-->
               </div>
