feat: new style rules

--- a/predict_me/static/assets/css/mycolors.css
+++ b/predict_me/static/assets/css/mycolors.css
@@ -43,6 +43,10 @@
   /* pointer-events: auto !important; */
 }
 
+.wait-cursor {
+  cursor: wait !important;
+}
+
 .pointer-event-none {
   pointer-events: none;
 }
@@ -51,7 +55,7 @@
   pointer-events: all;
 }
 
-span#dhWizardBtnWrapper:hover{
+span#dhWizardBtnWrapper:hover {
   cursor: not-allowed !important;
 }
 
@@ -735,7 +739,7 @@ div#fileUploadOverlay {
   cursor: progress !important;
 }
 
-.disabled-label{
+.disabled-label {
   pointer-events: none !important;
 }
 
@@ -778,19 +782,73 @@ div#fileUploadOverlay {
 /* End my d-block and d-none */
 
 /* Start Members Inbox */
-#member_compose_text_msg, .custom-quill-editor{
+#member_compose_text_msg,
+.custom-quill-editor {
   height: 300px;
 }
-#member_compose_subject{
+
+#member_compose_subject {
   border-radius: 0;
   border-left: 0;
   border-right: 0;
 }
-.in-valid-placeholder::placeholder{
+
+.in-valid-placeholder::placeholder {
   color: #F64E60;
 }
-.ql-container.ql-snow{
+
+.ql-container.ql-snow {
   border-top: 1px solid transparent;
 }
 
 /* End Members Inbox */
+
+/* Start Custom fieldset for account member settings payment */
+/***** Form 1 *****/
+
+.form-1-box {
+  padding-top: 30px;
+  text-align: left;
+}
+
+.form-1-box legend {
+  font-size: inherit;
+  line-height: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #555;
+}
+
+.form-1-box .form-check-label {
+  line-height: 1.5;
+  vertical-align: top;
+}
+
+
+.form-1-box button.btn-customized {
+  margin-top: 1rem;
+  padding: .75rem 1.5rem;
+  background: #db5d50;
+  border: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  box-shadow: none;
+}
+
+.form-1-box button.btn-customized:hover,
+.form-1-box button.btn-customized:active,
+.form-1-box button.btn-customized:focus,
+.form-1-box button.btn-customized:active:focus,
+.form-1-box button.btn-customized.active:focus,
+.form-1-box button.btn.btn-primary:not(:disabled):not(.disabled):active,
+.form-1-box button.btn.btn-primary:not(:disabled):not(.disabled):active:focus {
+  outline: 0;
+  background: #ca594d;
+  border: 0;
+  color: #fff;
+  box-shadow: none;
+}
+
+/* End Custom fieldset for account member settings payment */
