--- a/predict_me/static/assets/css/custom/data_handler.css
+++ b/predict_me/static/assets/css/custom/data_handler.css
@@ -130,7 +130,29 @@ td {
 }
 
 /* Start fix top border */
-.data-handler-summary-table th, .table td {
+.data-handler-summary-table th,
+.table td {
   border-top: unset !important;
 }
+
 /* End fix top border */
+
+/* Start data handler upgrade membership table */
+
+#data-handler-upgrade-membership-table {
+  table-layout: fixed !important;
+  width: 100%;
+}
+
+#data-handler-upgrade-membership-table tbody td {
+  vertical-align: middle;
+  /* text-align: center; */
+}
+/* #data-handler-upgrade-membership-table tbody td:last-child {
+  white-space: nowrap;
+} */
+#data-handler-upgrade-membership-table tbody label {
+  font-size: 1rem !important;
+}
+
+/* End data handler upgrade membership table */
