--- a/members_app/templates/members_app/segments/upgrade_membership_modal.html
+++ b/members_app/templates/members_app/segments/upgrade_membership_modal.html
@@ -41,7 +41,7 @@
                       <!-- A Stripe Element will be inserted here. -->
                     </div>
                     <!-- Used to display form errors. -->
-                    <div id="change-card-errors" role="alert"></div>
+                    <div id="change-card-errors" class="text-danger" role="alert"></div>
                   </div>
                 </div>
                 <!-- End Stripe Input -->
